# PyTest_003_Shop_App

./: README.md  README_EN.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
src/shop/: __init__.py  shop.py
tests/: conftest.py  test_dictionary.py  test_exceptions.py  test_my_shop.py  test_shop_buy.py  test_shop_data.py  test_shop_on_stock.py
