[metadata]
name = pytest-shop-app
version = 0.1.0
author = Tvoje Jméno
author_email = tvoje@email.com
description = Studijní projekt pro začátečníky: ukázka testování v pytest na modelu obchodu
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/<tvoje-jmeno>/pytest-shop-app
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pytest>=7.0

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
addopts = -ra -q
